test/mlir/for_bad_case_0.mlir.stderr
test/mlir/for_bad_case_0.mlir:3:18: error: use of value '%lb' expects different type than prior uses: 'index' vs 'i64'
  colgm.for %i = %lb to %ub {
                 ^
test/mlir/for_bad_case_0.mlir:2:23: note: prior use here
func.func @bad_lb_i64(%lb: i64, %ub: index) {
                      ^
